--- a/v2.md
+++ b/v2.md
@@ -1,18 +1,17 @@
 # V2 Endpoints
 
-All Uniswap V2 pairs consist of two different tokens. ETH is not a native currency in Uniswap V2, and is represented
-only by WETH in the V2 pairs. 
+All Mojitoswap V2 pairs consist of two different tokens. KCS is not a native currency in Mojitoswap V2, and is represented
+only by WKCS in the V2 pairs.
 
-The canonical WETH address used by the Uniswap interface is `0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2`. 
 
-## [`/v2/summary`](https://api.uniswap.info/v2/summary)
+## [`/v2/summary`]({host}/v2/summary)
 
-Returns data for the top ~1000 Uniswap V2 pairs, sorted by reserves. 
+Returns data for the top ~1000 Mojitoswap V2 pairs, sorted by reserves. 
 Results are edge cached for 15 minutes.
 
 ### Request
 
-`GET https://api.uniswap.info/v2/summary`
+`GET {host}/v2/summary`
 
 ### Response
 
@@ -27,14 +26,14 @@ Results are edge cached for 15 minutes.
 }
 ```
 
-## [`/v2/assets`](https://api.uniswap.info/v2/assets)
+## [`/v2/assets`]({host}/v2/assets)
 
-Returns the tokens in the top ~1000 pairs on Uniswap V2, sorted by reserves. 
+Returns the tokens in the top ~1000 pairs on Mojitoswap V2, sorted by reserves. 
 Results are edge cached for 24 hours.
 
 ### Request
 
-`GET https://api.uniswap.info/v2/assets`
+`GET {host}/v2/assets`
 
 ### Response
 
@@ -52,14 +51,14 @@ Results are edge cached for 24 hours.
 }
 ```
 
-## [`/v2/tickers`](https://api.uniswap.info/v2/tickers)
+## [`/v2/tickers`]({host}/v2/tickers)
 
-Returns data for the top ~1000 Uniswap V2 pairs, sorted by reserves.
+Returns data for the top ~1000 Mojitoswap V2 pairs, sorted by reserves.
 Results are edge cached for 1 minute.
 
 ### Request
 
-`GET https://api.uniswap.info/v2/tickers`
+`GET {host}/v2/tickers`
 
 ### Response
 
@@ -82,14 +81,14 @@ Results are edge cached for 1 minute.
 
 ## `/v2/orderbook/:pair`
 
-Returns simulated orderbook data for the given Uniswap V2 pair.
-Since Uniswap has a continuous orderbook, fixed amounts in an interval are chosen for bids and asks, 
-and prices are derived from the Uniswap V2 formula (accounting for both slippage and fees paid to LPs). 
+Returns simulated orderbook data for the given Mojitoswap V2 pair.
+Since Mojitoswap has a continuous orderbook, fixed amounts in an interval are chosen for bids and asks, 
+and prices are derived from the Mojitoswap V2 formula (accounting for both slippage and fees paid to LPs). 
 Results are edge cached for 240 minutes.
 
 ### Request
 
-`GET https://api.uniswap.info/v2/orderbook/:pair`
+`GET {host}/v2/orderbook/:pair`
 
 ### URL Parameters
 
@@ -115,13 +114,13 @@ Results are edge cached for 240 minutes.
 
 ## `/v2/trades/:pair`
 
-Returns all swaps in the last 24 hours for the given Uniswap V2 pair. 
+Returns all swaps in the last 24 hours for the given Mojitoswap V2 pair. 
 Results are edge cached for 15 minutes.
 
 The pair address is the address of the two tokens in either order.
 The first address is considered the base in the response.
 
-Note because Uniswap V2 supports flash swaps and borrowing of both tokens in a pair, you may wish to exclude these 
+Note because Mojitoswap V2 supports flash swaps and borrowing of both tokens in a pair, you may wish to exclude these 
 trade types (types `"???"` and `"borrow-both"`).
 
 ### URL Parameters
@@ -130,7 +129,7 @@ trade types (types `"???"` and `"borrow-both"`).
 
 ### Request
 
-`GET https://api.uniswap.info/v2/trades/:pair`
+`GET {host}/v2/trades/:pair`
 
 ### Response
 
